--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,14 @@ input[type=password]::-ms-clear
 .swiper {
   width: 100%;
   height: 100%;
-  
+  overflow: hidden;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-
+ 
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -38,8 +38,8 @@ input[type=password]::-ms-clear
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
-  align-items: center;
+  
 }
-.mySwiper{
-  margin-left: 150px;
-}
+/* .mySwiper{
+padding-left: 50px !important;
+} */
